--- a/cmd/dashboard/menu.html
+++ b/cmd/dashboard/menu.html
@@ -57,7 +57,7 @@
     <h3>Many 2 Many Vis</h3>
     <h4>Chords</h4>
     <table border="1" border="1" cellpadding="Dooodle">
-        {{range .O2mCircleItems}}<tr><td>{{ .Name }}</td><td><a href="{{ .Value }}" target="main">link</a></td></tr>{{end}}
+        {{range .M2mChordItems}}<tr><td>{{ .Name }}</td><td><a href="{{ .Value }}" target="main">link</a></td></tr>{{end}}
     </table>
 
   </body>
